apps/network-policies/allow-egress-loki.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-loki-gateway
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: loki
      app.kubernetes.io/component: gateway

  policyTypes:
    - Egress

  egress:
    # Loki gateway -> Loki single-binary backend
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: loki
              app.kubernetes.io/component: single-binary
      ports:
        - protocol: TCP
          port: 3100

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-loki-memberlist
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: loki
      app.kubernetes.io/component: single-binary

  policyTypes:
    - Egress

  egress:
    # Loki memberlist/gossip
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: loki
      ports:
        - protocol: TCP
          port: 7946
        - protocol: UDP
          port: 7946
