apps/network-policies/allow-thanos-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-thanos-egress
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: thanos

  policyTypes:
    - Egress

  egress:
    - ports:
        - protocol: TCP
          port: 443
