apps/network-policies/allow-thanos-query-sidecar.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-thanos-query-to-sidecar
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: thanos
              app.kubernetes.io/component: query
      ports:
        - protocol: TCP
          port: 10901
